# weatherframe

./: .gitignore  Cargo.toml  README.md  default.json  flake.nix  foo.html
src/: config.rs  lib.rs  main.rs  service.rs
